--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -1,3 +1,10 @@
 // Thomas McLaughlin
 // Additional ts compiler config file
 
+{
+    "extends": "@tsconfig/node20/tsconfig.json",
+    "compilerOptions": {
+        "rootDir": "src",
+        "outDir": "dist",
+    }
+}
